--- a/index.html
+++ b/index.html
@@ -124,7 +124,10 @@
     <img src="photos/pita-bread.png" class="w-12 h-12 sm:w-14 sm:h-14" alt="Saj">
     Saj (صاج)
   </button>
-
+<button class="tab btn tab-inactive flex items-center gap-4 text-2xl sm:text-3xl px-8 py-5" data-tab="pasta">
+  <img src="photos/spaguetti.png" class="w-12 h-12 sm:w-14 sm:h-14" alt="Pasta">
+  AromaPastalata
+</button>
   <button class="tab btn tab-inactive flex items-center gap-4 text-2xl sm:text-3xl px-8 py-5" data-tab="cocktail">
     <img src="photos/cocktail.png" class="w-12 h-12 sm:w-14 sm:h-14" alt="Cocktails">
     Cocktails
