Initial commit — Aroma Coffee website

--- a/index.html
+++ b/index.html
@@ -138,10 +138,10 @@
     Shisha
   </button>
 
-  <button class="tab btn tab-inactive flex items-center gap-4 text-2xl sm:text-3xl px-8 py-5" data-tab="dessert">
+  <!-- <button class="tab btn tab-inactive flex items-center gap-4 text-2xl sm:text-3xl px-8 py-5" data-tab="dessert">
     <img src="photos/sweets.png" class="w-12 h-12 sm:w-14 sm:h-14" alt="Desserts">
     Desserts
-  </button>
+  </button> -->
 
   <button class="tab btn tab-inactive flex items-center gap-4 text-2xl sm:text-3xl px-8 py-5" data-tab="snacks">
     <img src="photos/snack.png" class="w-12 h-12 sm:w-14 sm:h-14" alt="Snacks">
@@ -168,16 +168,19 @@
       <p class="italic text-[color:rgba(81,60,45,0.8)] mt-1">Savor every sip, cherish every moment.</p>
     </div>
 
-    <div class="relative rounded-2xl shadow-soft border border-[color:rgba(107,79,58,0.15)] max-w-3xl mx-auto overflow-hidden">
+    <div class="relative rounded-2xl shadow-soft border border-[color:rgba(107,79,58,0.15)] max-w-xl mx-auto overflow-hidden">
       <div id="sliderTrack" class="flex transition-transform duration-700 ease-in-out">
         <div class="w-full flex-shrink-0">
-          <img src="https://images.unsplash.com/photo-1509042239860-f550ce710b93?q=80&w=1200&auto=format&fit=crop" class="w-full h-64 object-cover" alt="Espresso shot">
+          <img src="photos/aroma1.jpg" class="w-full h-64 object-cover" alt="Espresso shot">
         </div>
         <div class="w-full flex-shrink-0">
-          <img src="https://images.unsplash.com/photo-1495474472287-4d71bcdd2085?q=80&w=1200&auto=format&fit=crop" class="w-full h-64 object-cover" alt="Cozy seating">
+          <img src="photos/aroma2.jpg" class="w-full h-64 object-cover" alt="Cozy seating">
         </div>
         <div class="w-full flex-shrink-0">
-          <img src="https://images.unsplash.com/photo-1517248135467-4c7edcad34c4?q=80&w=1200&auto=format&fit=crop" class="w-full h-64 object-cover" alt="Counter">
+          <img src="photos/aroma3.jpg" class="w-full h-64 object-cover" alt="Counter">
+        </div>
+        <div class="w-full flex-shrink-0">
+          <img src="photos/aroma4.jpg" class="w-full h-64 object-cover" alt="Counter">
         </div>
       </div>
     </div>
