Updated cold menu, fixed render.js, and added new images

--- a/index.html
+++ b/index.html
@@ -133,15 +133,16 @@
     Cocktails
   </button>
 
+<button class="tab btn tab-inactive flex items-center gap-4 text-2xl sm:text-3xl px-8 py-5" data-tab="desserts">
+    <img src="photos/sweets.png" class="w-12 h-12 sm:w-14 sm:h-14" alt="Desserts">
+    Andy's Aroma Desserts
+  </button> 
+
   <button class="tab btn tab-inactive flex items-center gap-4 text-2xl sm:text-3xl px-8 py-5" data-tab="shisha">
     <img src="photos/hookah.png" class="w-12 h-12 sm:w-14 sm:h-14" alt="Shisha">
     Shisha
   </button>
 
-  <!-- <button class="tab btn tab-inactive flex items-center gap-4 text-2xl sm:text-3xl px-8 py-5" data-tab="dessert">
-    <img src="photos/sweets.png" class="w-12 h-12 sm:w-14 sm:h-14" alt="Desserts">
-    Desserts
-  </button> -->
 
   <button class="tab btn tab-inactive flex items-center gap-4 text-2xl sm:text-3xl px-8 py-5" data-tab="snacks">
     <img src="photos/snack.png" class="w-12 h-12 sm:w-14 sm:h-14" alt="Snacks">
@@ -208,7 +209,8 @@
       <div class="card rounded-2xl p-5 border border-[color:rgba(107,79,58,0.12)]">
         <div class="font-semibold">Email</div>
         <div class="mt-2 text-[var(--ink)]">
-          <a href="mailto:hello@aromacafe.com" class="hover:underline">hello@aromacafe.com</a>
+          <a href="mailto:hello@aromacafe.com" class="hover:underline">
+coffeshoparoma@gmail.com</a>
         </div>
       </div>
 
@@ -216,7 +218,7 @@
       <div class="card rounded-2xl p-5 border border-[color:rgba(107,79,58,0.12)]">
         <div class="font-semibold">Phone</div>
         <div class="mt-2 text-[var(--ink)]">
-          <a href="tel:+96170123456" class="hover:underline">+961 70 123 456</a>
+          <a href="tel:+96170123456" class="hover:underline">+961 81 899 983</a>
         </div>
       </div>
 
