--- a/index.html
+++ b/index.html
@@ -292,12 +292,12 @@ coffeshoparoma@gmail.com</a>
         <span class="hidden sm:inline-block mx-2 text-[var(--ink)]/40">|</span>
 
         <!-- Social Buttons -->
-        <!-- <div class="flex flex-wrap gap-2">
-          <a href="https://instagram.com" target="_blank" rel="noopener noreferrer"
+   <div class="flex flex-wrap gap-2">
+          <a href="https://www.instagram.com/aromacoffee.lb?igsh=MXgzMWlyY2M4N2J0NA%3D%3D&utm_source=qr" target="_blank" rel="noopener noreferrer"
              class="btn px-3 py-1.5 rounded-full bg-[var(--coffee)] text-white border border-[color:rgba(107,79,58,0.2)] hover:bg-[var(--coffee-dark)] transition-colors">Instagram</a>
-          <a href="https://tiktok.com" target="_blank" rel="noopener noreferrer"
-             class="btn px-3 py-1.5 rounded-full bg-[var(--coffee)] text-white border border-[color:rgba(107,79,58,0.2)] hover:bg-[var(--coffee-dark)] transition-colors">TikTok</a>
-        </div> -->
+          <!-- <a href="https://tiktok.com" target="_blank" rel="noopener noreferrer"
+             class="btn px-3 py-1.5 rounded-full bg-[var(--coffee)] text-white border border-[color:rgba(107,79,58,0.2)] hover:bg-[var(--coffee-dark)] transition-colors">TikTok</a> -->
+        </div> 
 
       </div>
     </div>
