--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
       <div class="card rounded-2xl p-5 border border-[color:rgba(107,79,58,0.12)]">
         <div class="font-semibold">Email</div>
         <div class="mt-2 text-[var(--ink)]">
-          <a href="mailto:hello@aromacafe.com" class="hover:underline">
+          <a href="mailto:coffeshoparoma@gmail.com" class="hover:underline">
 coffeshoparoma@gmail.com</a>
         </div>
       </div>
@@ -218,7 +218,7 @@ coffeshoparoma@gmail.com</a>
       <div class="card rounded-2xl p-5 border border-[color:rgba(107,79,58,0.12)]">
         <div class="font-semibold">Phone</div>
         <div class="mt-2 text-[var(--ink)]">
-          <a href="tel:+96170123456" class="hover:underline">+961 81 899 983</a>
+          <a href="tel:+96181899983" class="hover:underline">+961 81 899 983</a>
         </div>
       </div>
 
